# Mescraft

./: LICENSE  README.md
src/: CMakeLists.txt  config.h  glad.c  main.cpp  triangle.cpp  triangle.h
src/components/: camera_component.h  inventory.h  item.h  keybind.h  physics_component.h  render_component.h  transform_component.h
src/controller/: app.cpp  app.h
src/entities/: player.h
src/shaders/: fragment.txt  shader.cpp  shader.h  vertex.txt  vertex2D.txt
src/shaders/hud/2d/: fragment2D.txt
src/shaders/hud/3d/: fragment3D.txt  vertex3D.txt
src/shaders/hud/text/: fragment_text.txt  vertex_text.txt
src/shaders/world_space/: fragment.txt  vertex.txt
src/systems/: camera_system.cpp  camera_system.h  logic_system.cpp  logic_system.h  mesh_system.cpp  mesh_system.h  physics_system.cpp  physics_system.h  render_system.cpp  render_system.h  textureManager.cpp  textureManager.h
src/utilities/: frustum.h  raycast.h
src/world/: biome.cpp  biome.h  block.h  chunk.h  world.cpp  world.h
